--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
             }
         }
 
-        document.querySelectorAll('.service-item, .avatar-box').forEach(item => {
+        document.querySelectorAll('.service-item, .avatar-box, .navbar-item').forEach(item => {
             new HoverEffect(item);
         });
     </script>
