--- a/index.html
+++ b/index.html
@@ -112,40 +112,40 @@
 
                 <div class="separator"></div>
 
-                <ul class="social-list">
+               
+                    <ul class="social-list">
 
                     <li class="social-item">
-                        <a href="https://www.linkedin.com/in/sachin-nimbal/" class="social-link">
+                        <a href="https://www.linkedin.com/in/sachin-nimbal/" data-nav-link target="_blank" class="social-link">
                             <ion-icon name="logo-linkedin"></ion-icon>
                         </a>
                     </li>
 
                     <li class="social-item">
-                        <a href="https://www.facebook.com/sachin.kumar.nimbal9/" class="social-link">
+                        <a href="https://www.facebook.com/sachin.kumar.nimbal9/" data-nav-link target="_blank" class="social-link">
                             <ion-icon name="logo-facebook"></ion-icon>
                         </a>
                     </li>
 
                     <li class="social-item">
-                        <a href="https://github.com/sachinnimbal" class="social-link">
+                        <a href="https://github.com/sachinnimbal" data-nav-link target="_blank" class="social-link">
                             <ion-icon name="logo-github"></ion-icon>
                         </a>
                     </li>
 
                     <li class="social-item">
-                        <a href="https://codepen.io/sachinnimbal" class="social-link">
+                        <a href="https://codepen.io/sachinnimbal" data-nav-link target="_blank" class="social-link">
                             <ion-icon name="logo-codepen"></ion-icon>
                         </a>
                     </li>
 
                     <li class="social-item">
-                        <a href="https://www.instagram.com/sachin.kumar.nimbal/" class="social-link">
+                        <a href="https://www.instagram.com/sachin.kumar.nimbal/" data-nav-link target="_blank" class="social-link">
                             <ion-icon name="logo-instagram"></ion-icon>
                         </a>
                     </li>
 
                 </ul>
-
             </div>
 
         </aside>
