--- a/index.html
+++ b/index.html
@@ -393,9 +393,8 @@
           <!-- PDF Viewer Section -->
           <section class="pdf-viewer-section">
             <div class="pdf-viewer-header">
-              <h3 class="pdf-viewer-title">
-                <i class="fas fa-file-pdf"></i>
-                Resume Document
+              <h3 class="h3 skills-title">
+                <i class="fas fa-file-pdf"></i> Resume Document
               </h3>
               <div class="pdf-controls">
                 <div class="zoom-controls">
